# ft_42

./: CURATED_POOLS_STATUS.md  DESIGN.md  EXAM_INTEGRATION_STATUS.md  EXAM_RUNTIME_REPAIR_STATUS.md  EXAM_V1_FREEZE.md  IMPORT_REPORT_SUMMARY.md  MANUAL_CURATION_PLAN.md  MANUAL_REVIEW_QUEUE.md  MIGRATION_PLAN.md  PISCINE_CORE_V1_FREEZE.md  PISCINE_DATASET_PLAN.md  PISCINE_DATASET_STATUS.md  PISCINE_MODE_DESIGN.md  PISCINE_MODE_STATUS.md  README.md  RECONCILIATION_PLAN.md  REFERENCE_BUNDLE_AUDIT_STATUS.md  REFERENCE_BUNDLE_REPAIR_PLAN.md  STAGING_IMPORT_PLAN.md  STAGING_IMPORT_STATUS.md  bootstrap_codex_project.sh  build_ecosystem.sh
platform/: .gitignore  CATALOG_DESIGN.md  DESIGN.md  EXAM_MODE_DESIGN.md  POOL_ENGINE_DESIGN.md  README.md  pyproject.toml
platform/apps/cli/: README.md
platform/apps/dashboard/: README.md
platform/core/analytics/: README.md
platform/core/catalog/: README.md
platform/core/exams/: README.md
platform/core/grading/: README.md
platform/core/sandbox/: README.md
platform/core/scheduler/: README.md
platform/core/sessions/: README.md
platform/core/storage/: README.md
platform/runtime/: README.md
platform/storage/: README.md
platform/tests/: conftest.py  test_cli_product_surface.py  test_curated_pools.py  test_curriculum_service.py  test_dashboard_app.py  test_exam_integration_curated.py  test_exam_session_engine.py  test_legacy_import.py  test_legacy_manual_curation.py  test_legacy_reconciliation.py  test_piscine_session_engine.py  test_pool_engine.py  test_progression_service.py  test_reference_bundle_runtime_ready.py
(+4492 files in other folders)
